# ilgda-ipc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: blocking.rs  entity.rs  lib.rs  serde.rs  tokio.rs
src/async_channels/: mod.rs  recv.rs  send.rs
src/serde/: blocking.rs  de.rs  mod.rs  ser.rs
src/serde/tokio/: de.rs  mod.rs  ser.rs
