[package]
name = "ilgda-ipc"
version = "0.1.1"
edition = "2021"
description = "IPC standard used for ilgda"
license = "MIT"
authors = ["NightMare-Vortex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.190"
ipc-channel = "0.18.0"
bincode = "1"
crossbeam = "0.8.2"
tokio = { version = "1", features = ["full"] } # only sync
paste = "1"