[package]
name = "ilgda-ipc"
version = "0.2.1"
edition = "2021"
description = "IPC standard used for ilgda"
license = "MIT"
authors = ["NightMare-Vortex"]
repository = "https://github.com/NightMare-Vortex/ilgda-ipc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
ipc-channel = "0.18"
bincode = "1"
crossbeam = "0.8"
tokio = { version = "1", features = ["sync"] }
paste = "1"
heap-array = { version = "0.1.5", features = ["serde"] }
